# Cistic-a-poradac

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE_CODE_TASK.md  CONSOLIDATION_SCENARIO.md  Dockerfile  PLAN_10_10.md  README.md  catalog.db  pyproject.toml
.github/workflows/: ci.yml
_tree_smoke_labels/: labels.tsv
dedup_reports/: perceptual_dedup_report.tsv  perceptual_dedup_summary.tsv  safe_dedup_plan.json  safe_dedup_plan.tsv  safe_dedup_results.json  ultrastar_transfer_results.json
docs/: GOD_MODE_POLICY.md
installer/macos/: AppIcon.icns  build_app.sh  build_installer.sh  generate_icon.py  postinstall
scripts/: publish_to_github.sh
src/godmode_media_library/: __init__.py  actions.py  asset_sets.py  audit.py  autolabel_people.py  autolabel_place.py  backup_monitor.py  batch_rename.py  bitrot.py  catalog.py  checkpoint.py  cleanup.py  cli.py  cloud.py  config.py  consolidation.py  consolidation_types.py  delete_ops.py  deps.py  disk_space.py  distributed_backup.py  exif_reader.py  exiftool_extract.py  face_crypto.py  face_detect.py  i18n.py  iphone_import.py  labels.py  logging_config.py  media_probe.py  media_score.py  metadata_merge.py  metadata_richness.py  models.py  perceptual_hash.py  pipeline.py  planning.py  prune_recommend.py  quality.py  recovery.py  (+9 more)
src/godmode_media_library/web/: api.py  app.py  shared.py
src/godmode_media_library/web/routes/: __init__.py  albums.py  backup.py  cloud.py  consolidation.py  duplicates.py  faces.py  files.py  gallery.py  iphone.py  recovery.py  reorganize.py  scenarios.py  search.py  shares.py  system.py  tags.py
src/godmode_media_library/web/static/: app.js  index.html  style.css
src/godmode_media_library/web/static/js/: activity-feed.js  api.js  command-palette.js  folder-picker.js  i18n.js  lightbox.js  main.js  modal.js  quicklook.js  search.js  selection.js  share.js  tags.js  tasks.js  utils.js
src/godmode_media_library/web/static/js/pages/: albums.js  backup.js  cloud.js  consolidation.js  dashboard.js  doctor.js  duplicates.js  files.js  gallery.js  iphone.js  map.js  people.js  pipeline.js  recovery.js  reorganize.js  scenarios.js  similar.js  timeline.js
tests/: conftest.py  test_actions.py  test_asset_sets.py  test_audit.py  test_autolabel_people.py  test_autolabel_place.py  test_backup_monitor.py  test_backup_routes.py  test_batch_rename.py  test_bitrot.py  test_catalog.py  test_catalog_extended.py  test_checkpoint.py  test_checkpoint_resume.py  test_cli.py  test_cli_commands.py  test_cloud.py  test_cloud_api.py  test_cloud_extended.py  test_cloud_recovery_e2e.py  test_collision_safe_paths.py  test_config.py  test_consolidation_e2e.py  test_consolidation_extended.py  test_consolidation_routes.py  test_consolidation_routes_ext.py  test_consolidation_types.py  test_consolidation_unit.py  test_delete_ops.py  test_deps.py  test_disk_space.py  test_distributed_backup.py  test_duplicates_routes.py  test_exif_reader.py  test_exiftool_extract.py  test_face_api.py  test_face_crypto.py  test_face_detect.py  test_faces_routes.py  test_file_operations_e2e.py  (+47 more)
tests/fixtures/: create_fixtures.py
